// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expenses Summary correctly 1`] = `
<p>
  Viewing 0  expenses totalling $0.00
</p>
`;

exports[`Should render Expenses Summary correctly 2 1`] = `
<p>
  Viewing 3  expenses totalling $1,141.95
</p>
`;
